Fix issue with being able to click on "Finish Turn" on other player turn Allow more width to the main container Align btns to the right. Style buttons

--- a/src/app/stick-row/stick-row.component.css
+++ b/src/app/stick-row/stick-row.component.css
@@ -1,4 +1,11 @@
 .stickRow{
     width: fit-content;
+    min-height: 60px;
     margin: 0 auto;
+}
+
+.chooseBtn{
+    position:absolute;
+    right: 5px;
+    margin-top: 5px;
 }
