--- a/src/app/sticks-container/sticks-container.component.css
+++ b/src/app/sticks-container/sticks-container.component.css
@@ -1,3 +1,4 @@
 .stickContainer{
     background-color: green;
+    position: relative;
 }
